--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,14 @@ html,body {
 	/* The html and body elements cannot have any padding or margin. */
 }
 
+a {
+    white-space: pre-wrap !important; /* css-3 */    
+    white-space: -moz-pre-wrap !important; /* Mozilla, since 1999 */
+    white-space: -pre-wrap !important; /* Opera 4-6 */    
+    white-space: -o-pre-wrap !important; /* Opera 7 */    
+    word-wrap: break-word !important; /* Internet Explorer 5.5+ */
+}
+
 hr {
 	margin: 1px !important;
 }
