File manager starts

--- a/css/styles.css
+++ b/css/styles.css
@@ -50,7 +50,7 @@ a img {border:0; outline:0;}
     background: #ddd;
 }
 .files_area_drop {
-    background: #eee;
+    background: #dadada;
 }
 
 .button_as_link {
