Добавлен функционал по получению секретных ссылок
Signed-off-by: Gerold103 <vshpilevoi@yandex.ru>

--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,10 @@ a {
     text-decoration: none !important;
 }
 
+button, .btn, .btn-default {
+	white-space: pre-wrap;
+}
+
 hr {
 	margin: 1px !important;
 }
